# cmdalias

./: .gitignore  LICENSE  Makefile.in  README.md  autocomplete.bash  cmdalias.conf  configure  configure.ac
docs/: CNAME  README.md
examples/: docker  kubectl
include/: cmdalias.h  config.h.in  lexer.h
src/: alias.c  bash_autocomplete.c  cmdalias.c  lexer.c  lexer.l  list.c  parser.c  parser.h  parser.y
